[package]
name = "learn5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
rand = "0.8.5"

# enable a small amout of optimation in debug mode
[profile.dev]
opt-level = 1

# enable high optimizations for dependencies (inl. bevy)
[profile.dev.package."*"]
opt-level = 3 